refactor: align group code with project conventions